# gerber2ems

./: .ci.yml  .gitignore  EMS_Plane.blend  README.md  apt_packages.list  geometry.sh  pyproject.toml
ci_test/: ci_test.kicad_pcb  ci_test.kicad_pro  config.json  octave-workspace  simulation_script.m
configs/: config.json  simulation_script.m
example_gerbers/basic/: basic-Edge_Cuts.gbr  basic-F_Cu.gbr  basic.kicad_pcb  basic.kicad_pro  basic.kicad_sch  simulation.json  stackup.json
example_gerbers/ddr4/: ddr4-Edge_Cuts.gbr  ddr4-F_Cu.gbr  ddr4.kicad_pcb
example_gerbers/ddr5/: ddr5-testbed.kicad_pcb  ddr5-testbed.kicad_pro  simulation.json
example_gerbers/differential/: differential.kicad_pcb  differential.kicad_pro  simulation.json
example_gerbers/job-simulation-part/: jetson-orin-baseboard.kicad_pro
example_gerbers/real/: real.kicad_pcb  real.kicad_pro  real.kicad_sch  simulation.json
examples/basic/: simulation.json
examples/differential/: differential.kicad_pcb  differential.kicad_pro  differential.kicad_sch  simulation.json
examples/filter/: simulation.json  vna.csv
examples/job-simulation-part/: jetson-orin-baseboard.kicad_pcb  simulation.json
examples/meander_loose/: simulation.json  vna.csv
examples/meander_tight/: simulation.json  vna.csv
examples/real/: real.kicad_pcb  simulation.json
examples/stub_long/: simulation.json  vna.csv
examples/stub_short/: vna.csv  (+1 more)
gerber_import/: gerber_import-F_Cu.gbr  gerber_import.kicad_pcb  gerber_import.kicad_prl  gerber_import.kicad_pro  main.py  process_gbr.py
script/: antmicro.mplstyle  config.py  constants.py  geometry.sh  importer.py  install.sh  kmake_interface.py  main.py  postprocess.py  process_gbr.py  pyproject.toml  requirements.txt  simulation.py
src/: constants.py  importer.py  main.py
(+131 files in other folders)
