[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "ems_kicad"
version = "0.0.1"
dependencies = ["numpy", "matplotlib", "coloredlogs", "nanomesh", "scikit-rf", "Pillow"]
scripts = {ems-kicad = "ems_kicad.main:main"}

[tool.setuptools.package-data]
ems_kicad = ["*.mplstyle"]

[project.optional-dependencies]
dev = ["mypy", "ruff", "black"]

[tool.ruff]
select = ["E", "F", "N", "B", "D", "A", "RET"]
line-length = 120
target-version = "py38"

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
